@@ -3,6 +3,8 @@
 - Changed snmpIfAlias column size to 256. Bug 1127
 - Modified MockPollConfig to share code with PollOutageConfigFactory. Bug 1122
 - Write test for and fixed midnight outages in PollOutageConfigManager, Bug 1122
+- Fix GETBULK in SnmpIfCollector to handle cases where indices are not
+  contiguous.  Fixed ArrayIndexOutOfBound exceptions. Bug 1141
 
 1.1.5 to 1.2.0
 ----------------------------------------------------------------------
